--- a/myportforio-site/styles/style.css
+++ b/myportforio-site/styles/style.css
@@ -53,3 +53,8 @@ body {
     width: 50px;
     height: 50px;
 }
+
+iframe {
+    border: 1px solid black;
+    width: 100%; /* takes precedence over the width set with the HTML width attribute */
+}
